--- a/film_detail/pooniverse.css
+++ b/film_detail/pooniverse.css
@@ -137,6 +137,10 @@ body {
   font-weight: bold;
   transition: background-color 0.3s ease;
 }
+.watch-trailer a {
+  text-decoration: none;
+  color: #fff;
+}
 
 .watch-trailer:hover {
   background-color: #cb0b14; /* Donkerder rood bij hover */
