--- a/film_detail/bambi.css
+++ b/film_detail/bambi.css
@@ -173,3 +173,51 @@ body {
   margin-bottom: 10px;
   text-transform: uppercase;
 }
+
+/*css animatie*/
+.heart {
+  background: red;
+  position: relative;
+  height: 25px;
+  width: 25px;
+  transform: rotate(-45deg) scale(1);
+  animation: pulse 2s linear infinite;
+  margin: 1rem;
+}
+
+.heart::after {
+  background: inherit;
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  top: -50%;
+  left: 0;
+  height: 25px;
+  width: 25px;
+}
+
+.heart::before {
+  background: inherit;
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -50%;
+  height: 25px;
+  width: 25px;
+}
+
+@keyframes pulse {
+  0% {
+    transform: rotate(-45deg) scale(1);
+    opacity: 0;
+  }
+  50% {
+    transform: rotate(-45deg) scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(-45deg) scale(1);
+    opacity: 1;
+  }
+}
